k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mro-pulse
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: devops-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          resources:
            requests:
              cpu: 150m
              memory: 200Mi
            limits:
              cpu: 500m
              memory: 400Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mro-pulse
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
