k8s/fastapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: mro-pulse
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: devops-fastapi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: mro-pulse
spec:
  selector:
    app: fastapi
  ports:
    - port: 8000
      targetPort: 8000
